videoaggregator: lift restriction of changing pixel-aspect-ratio

The videoaggregator can convert PAR, there is no reason for
restricting it.

https://bugzilla.gnome.org/show_bug.cgi?id=754291